[package]
name = "xs233"
version = "0.1.0"
edition = "2021"
authors = [ "Jan Winkelmann (keks)" ]
description = "xs233 binary elliptic curves. uses FFI bindings to c-xs233"
readme = "README.md"
repository = "https://github.com/keks/xs233"
keywords = ["cryptography", "bindings", "ecc", "elliptic", "curve"]
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
rand = "0.8.5"
rand_chacha = "0.3.1"
subtle = "2.5.0"
xs233-sys = "0.1.0"
